feat(step-4): adding tasks and refactoring

--- a/src/app/app-bar/app-bar.component.html
+++ b/src/app/app-bar/app-bar.component.html
@@ -1,6 +1,6 @@
 <p>
   <mat-toolbar>
-    <span>My App</span>
+    <span>To do </span>
     <span class="example-spacer"></span>
     <button mat-button (click)="openDialog()"><mat-icon>add</mat-icon></button>
   </mat-toolbar>
