--- a/src/app/app-bar/add-task/add-task.component.html
+++ b/src/app/app-bar/add-task/add-task.component.html
@@ -1,35 +1,15 @@
-<mat-form-field class="example-chip-list" appearance="fill">
-  <mat-label>Favorite Fruits</mat-label>
-  <mat-chip-list #chipList aria-label="Fruit selection">
-    <mat-chip *ngIf="fruit.length>0"
-      (removed)="remove()">
-      {{fruit}}
-      <button matChipRemove>
-        <mat-icon>cancel</mat-icon>
-      </button>
-    </mat-chip>
-    <input
-      placeholder="New fruit..."
-      #fruitInput
-      [formControl]="categoryControl"
-      [matAutocomplete]="auto"
-      [matChipInputFor]="chipList"
-      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-      (matChipInputTokenEnd)="add($event)">
-  </mat-chip-list>
-  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-    <mat-option *ngFor="let fruit of filteredCategories | async" [value]="fruit">
-      {{fruit}}
-    </mat-option>
-  </mat-autocomplete>
-
-</mat-form-field>
+<form [formGroup]="AddTaskForm">
+  <mat-form-field appearance="fill">
+    <mat-label>Task</mat-label>
+    <input matInput formControlName="category">
+  </mat-form-field>
 <mat-form-field appearance="fill">
-  <mat-label>Input</mat-label>
-  <input matInput [(ngModel)]="task">
+  <mat-label>Task</mat-label>
+  <input matInput formControlName="task">
 </mat-form-field>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="{category: fruitInput, task: taskInput}" cdkFocusInitial>Install</button>
+  <button mat-button mat-dialog-close="">Cancel</button>
+  <button mat-button type="submit" (click)="onSubmit()" cdkFocusInitial>Add</button>
 </mat-dialog-actions>
+</form>
