fix(step-4): form label

--- a/src/app/app-bar/add-task/add-task.component.html
+++ b/src/app/app-bar/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="AddTaskForm">
   <mat-form-field appearance="fill">
-    <mat-label>Task</mat-label>
+    <mat-label>Category</mat-label>
     <input matInput formControlName="category">
   </mat-form-field>
 <mat-form-field appearance="fill">
